--- a/habeckturismo-backend/src/main/resources/application.properties
+++ b/habeckturismo-backend/src/main/resources/application.properties
@@ -7,10 +7,10 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
 #quando executar da primeira vez
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 
 #quando executar das outras vezes
-#spring.jpa.hibernate.ddl-auto=update 
+spring.jpa.hibernate.ddl-auto=update 
 
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.generate-ddl=true
